--- a/aoj/aoj.csproj
+++ b/aoj/aoj.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="volume0\_0059.cs" />
     <Compile Include="volume0\_0060.cs" />
+    <Compile Include="volume0\_0061.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
