--- a/aoj/aoj.csproj
+++ b/aoj/aoj.csproj
@@ -38,10 +38,11 @@
     <Compile Include="volume0\_0059.cs" />
     <Compile Include="volume0\_0060.cs" />
     <Compile Include="volume0\_0061.cs" />
+    <Compile Include="volume0\_0062.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Folder Include="volume1\" />
     <Folder Include="volume2\" />
   </ItemGroup>
+  <ItemGroup />
 </Project>
