--- a/aoj/aoj.csproj
+++ b/aoj/aoj.csproj
@@ -39,6 +39,7 @@
     <Compile Include="volume0\_0060.cs" />
     <Compile Include="volume0\_0061.cs" />
     <Compile Include="volume0\_0062.cs" />
+    <Compile Include="volume0\_0063.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="volume1\" />
