--- a/aoj/aoj.csproj
+++ b/aoj/aoj.csproj
@@ -40,6 +40,7 @@
     <Compile Include="volume0\_0061.cs" />
     <Compile Include="volume0\_0062.cs" />
     <Compile Include="volume0\_0063.cs" />
+    <Compile Include="volume0\_0064.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="volume1\" />
