--- a/aoj/aoj.csproj
+++ b/aoj/aoj.csproj
@@ -41,6 +41,7 @@
     <Compile Include="volume0\_0062.cs" />
     <Compile Include="volume0\_0063.cs" />
     <Compile Include="volume0\_0064.cs" />
+    <Compile Include="volume0\_0065.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="volume1\" />
