--- a/aoj/aoj.csproj
+++ b/aoj/aoj.csproj
@@ -42,6 +42,7 @@
     <Compile Include="volume0\_0063.cs" />
     <Compile Include="volume0\_0064.cs" />
     <Compile Include="volume0\_0065.cs" />
+    <Compile Include="volume0\_0066.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="volume1\" />
