--- a/aoj/aoj.csproj
+++ b/aoj/aoj.csproj
@@ -51,6 +51,7 @@
     <Compile Include="volume0\_0067.cs" />
     <Compile Include="volume0\_0068.cs" />
     <Compile Include="volume0\_0069.cs" />
+    <Compile Include="volume0\_0070.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="volume1\" />
@@ -60,6 +61,7 @@
     <Content Include="testfiles\volume0\0067.txt" />
     <Content Include="testfiles\volume0\0068.txt" />
     <Content Include="testfiles\volume0\0069.txt" />
+    <Content Include="testfiles\volume0\0070.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="submit.cs" />
